common/force-app/main/default/objects/Transaction_Line_Item__c/Transaction_Line_Item__c.object-meta.xml
<CustomObject>
    <description>These records will represent the line items in a transaction.</description>
    <label>Transaction Line Item</label>
    <nameField>
        <displayFormat>TL-{00000}</displayFormat>
        <label>Transaction Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>