common/force-app/main/default/objects/Transaction_Line_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>This will hold the category/chart of account related.</description>
    <label>Account</label>
    <type>TextArea</type>
</CustomField>