common/force-app/main/default/objects/Transaction_Line_Item__c/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <formula>Chart_Of_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Type</label>
    <type>Text</type>
</CustomField>