common/force-app/main/default/objects/Transaction_Line_Item__c/fields/Chart_Of_Account__c.field-meta.xml
<CustomField>
    <fullName>Chart_Of_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart Of Account</label>
    <referenceTo>Chart_Of_Account__c</referenceTo>
    <relationshipLabel>Transaction Line Items</relationshipLabel>
    <relationshipName>Transaction_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>