common/force-app/main/default/objects/Transaction_Line_Item__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>