common/force-app/main/default/objects/Transaction_Line_Item__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <label>Issue Date</label>
    <type>DateTime</type>
</CustomField>