common/force-app/main/default/objects/Transaction_Line_Item__c/fields/Line_item_amount__c.field-meta.xml
<CustomField>
    <fullName>Line_item_amount__c</fullName>
    <label>Line item amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>