common/force-app/main/default/objects/Transaction_Line_Item__c/fields/Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Description__c</fullName>
    <label>Line Item Description</label>
    <type>TextArea</type>
</CustomField>