common/force-app/main/default/objects/Transaction_Line_Item__c/fields/Redeemtion_Payable_chart_of_account__c.field-meta.xml
<CustomField>
    <fullName>Redeemtion_Payable_chart_of_account__c</fullName>
    <formula>Chart_Of_Account__r.Redemption_Payment_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Redeemtion Payable chart of account</label>
    <type>Checkbox</type>
</CustomField>