common/force-app/main/default/objects/Transaction_Line_Item__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <length>200</length>
    <type>Text</type>
</CustomField>