common/force-app/main/default/objects/Transaction_Line_Item__c/fields/Xero_ID__c.field-meta.xml
<CustomField>
    <fullName>Xero_ID__c</fullName>
    <label>Xero ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>